--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 
       <template id="tem">
-        <div class="col mt-5" id="cln">
-            <div class="card" style="width: 18rem;" id="crd">
+        <div class="col-12 col-sm-6 col-md-4 mt-5" id="cln">
+            <div class="card" style="width: 100%;" id="crd">
                 <a href="" id="link" style="text-decoration: none; color: black;">
                 <img src="" class="card-img-top" alt="" id="im" style="background-size: cover; height: 10rem;">
                 <div class="card-body" id="cb">
