--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 </head>
 <body style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem; width: 100%;">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem;">
+        <div>
           <a class="navbar-brand" href="#" style="background-color: rgb(58, 71, 87); border-radius: 10px; padding: 4px;"><b> News SpaceFlight</b></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
