--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        @media (max-width: 767.98px) {
+        .navbar {
+            width: 100%;
+    }
+}
 
+    </style>
 </head>
 <body style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem;">
-        <div>
+        <div class="container-fluid">
           <a class="navbar-brand" href="#" style="background-color: rgb(58, 71, 87); border-radius: 10px; padding: 4px;"><b> News SpaceFlight</b></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
