--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         @media (max-width: 767.98px) {
-        .navbar {
-            width: 100%;
-    }
-}
+            .navbar {
+                width: 100%;
+            }
+            .container-fluid {
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
 
     </style>
 </head>
