--- a/index.html
+++ b/index.html
@@ -6,20 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        @media (max-width: 767.98px) {
-            .navbar {
-                width: 100%;
-            }
-            .container-fluid {
-                padding-left: 0;
-                padding-right: 0;
-            }
-        }
 
-    </style>
 </head>
-<body style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" style="background-color: rgb(58, 71, 87); border-radius: 10px; padding: 4px;"><b> News SpaceFlight</b></a>
@@ -60,7 +49,7 @@
 
 
 
-
+<div style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
       <div class="container">
         <div class="row row-cols-3" id="cols">
           
@@ -69,7 +58,7 @@
 
       <div class="container m-5"><center><button type="button" class="btn btn-primary" id="pre">Pre</button> <br> <button type="button" class="btn btn-primary" id="next">Next</button></center></div>
 
-
+</div>
       <template id="tem">
         <div class="col-12 col-sm-6 col-md-4 mt-5" id="cln">
             <div class="card" style="width: 100%;" id="crd">
