--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body>
+<body style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="height: 5rem;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" style="background-color: rgb(58, 71, 87); border-radius: 10px; padding: 4px;"><b> News SpaceFlight</b></a>
@@ -49,16 +49,15 @@
 
 
 
-<div style="background-repeat: no-repeat; background-size: cover; background-position: center;" id="b">
       <div class="container">
         <div class="row row-cols-3" id="cols">
           
         </div>
       </div>
 
-      <div class="container m-5"><center><button type="button" class="btn btn-primary" id="pre">Pre</button> <br> <button type="button" class="btn btn-primary" id="next">Next</button></center></div>
+      <div class="container mt-5"><center><button type="button" class="btn btn-primary" id="pre">Pre</button> <br> <button type="button" class="btn btn-primary" id="next">Next</button></center></div>
 
-</div>
+
       <template id="tem">
         <div class="col-12 col-sm-6 col-md-4 mt-5" id="cln">
             <div class="card" style="width: 100%;" id="crd">
@@ -83,7 +82,7 @@
           </div> <!--col end-->
       </template>
 
-      <script src="news.js"></script>
+<script src="news.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
