--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="container mt-5"><center><button type="button" class="btn btn-primary" id="pre">Pre</button> <br> <button type="button" class="btn btn-primary" id="next">Next</button></center></div>
+      <div class="container mt-3 mb-3"><center><button type="button" class="btn btn-primary" id="pre">Pre</button> <br> <button type="button" class="btn btn-primary" id="next">Next</button></center></div>
 
 
       <template id="tem">
