--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 
 
-      <div class="container">
+      <div class="container mt-5">
         <div class="row row-cols-3" id="cols">
           
         </div>
